# Smarthome-Plasma

./: CMakeLists.txt
package/: metadata.desktop
package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  main.qml
plugin/: CMakeLists.txt  plasmoidplugin.cpp  plasmoidplugin.hpp  qmldir
smarthome/: metadata.desktop
smarthome/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  main.qml
